# for display continuity sake please use 2 spaces instead of tabs

2015-06-23 bertazza
  * improved legend handling for rasters (via RasterStyler):
  * the legend is now integrated in the layer tree of the TOC

2015-06-23 mmichaud <m.michael.michaud@orange.fr>
  * fix bug #406 wrong message "layers not saved"

2015-06-17 bertazza 
  * added Raster Styler to manage symbologies for 1-banded raster
  * (available from raster layer contextual menu)
  
2015-06-17 mmichaud <m.michael.michaud@orange.fr>
  * fix bug in dbf writer described in
    http://sourceforge.net/p/jump-pilot/mailman/message/34210973/
  * read/write cpg file (codepage for shp/dbf)

2015-06-13 mmichaud <m.michael.michaud@orange.fr>
  * LayerView / AttributePanel selection synchronization
  * update SetAttributes PlugIn to 0.7.0

2015-06-13 mmichaud <m.michael.michaud@orange.fr>
  * increase readTimout delay of WMSService from 5 to 10

2015-06-08 bertaz
  * Sextante raster layers: fixed bug in nodata color handling when using symbology.

2015-06-04 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * Add WMS Legend plugin to WMS layer context menu

2015-06-01 mmichaud <m.michael.michaud@orange.fr>
  * new select tool to select one or several overlapping features

2015-05-25 mmichaud <m.michael.michaud@orange.fr>
  * shx file was not closed

2015-05-25 mmichaud <m.michael.michaud@orange.fr>
  * update SetAttributes extension to version 0.6.1 : shorter initial delay
    for right-click tooltip

2015-05-23 mmichaud <m.michael.michaud@orange.fr>
  * update SetAttributes extension to version 0.6 : right-click on the
    button now displays a rich text tooltip containing the button parameters.
    Add a backgroundColor attribute for the buttons.

2015-05-18 mmichaud <m.michael.michaud@orange.fr>
  * Fix #402 (regression after the fix of #390)

2015-05-17 mmichaud <m.michael.michaud@orange.fr>
  * Fix #390 : selection lost if layer is moved
  * Replace layerManager.remove by category.remove to sort layers :